2009-09-01  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/HP/HP_Business_Inkjet_2250.ppd,
	  PPD/HP/HP_Business_Inkjet_2280.ppd,
	  PPD/HP/HP_Business_Inkjet_2600.ppd,
	  PPD/HP/HP_Business_Inkjet_2800.ppd,
	  PPD/HP/HP_Business_Inkjet_3000.ppd,
	  PPD/HP/HP_CM8050_CM8060_MFP.ppd, PPD/HP/HP_Color_LaserJet.ppd,
	  PPD/HP/HP_Color_LaserJet_2550.ppd,
	  PPD/HP/HP_Color_LaserJet_2605.ppd,
	  PPD/HP/HP_Color_LaserJet_2700.ppd,
	  PPD/HP/HP_Color_LaserJet_2800.ppd,
	  PPD/HP/HP_Color_LaserJet_3000.ppd,
	  PPD/HP/HP_Color_LaserJet_3800.ppd,
	  PPD/HP/HP_Color_LaserJet_4500.ppd,
	  PPD/HP/HP_Color_LaserJet_4550.ppd,
	  PPD/HP/HP_Color_LaserJet_4700.ppd,
	  PPD/HP/HP_Color_LaserJet_4730_MFP.ppd,
	  PPD/HP/HP_Color_LaserJet_5550.ppd,
	  PPD/HP/HP_Color_LaserJet_5M.ppd,
	  PPD/HP/HP_Color_LaserJet_8500.ppd,
	  PPD/HP/HP_Color_LaserJet_8550.ppd,
	  PPD/HP/HP_Color_LaserJet_CM1015.ppd,
	  PPD/HP/HP_Color_LaserJet_CM4730_MFP.ppd,
	  PPD/HP/HP_Color_LaserJet_CP3505.ppd,
	  PPD/HP/HP_Color_LaserJet_CP4005.ppd,
	  PPD/HP/HP_LaserJet_1200.ppd, PPD/HP/HP_LaserJet_1220.ppd,
	  PPD/HP/HP_LaserJet_1320_Series.ppd,
	  PPD/HP/HP_LaserJet_2100_Series.ppd, PPD/HP/HP_LaserJet_2200.ppd,
	  PPD/HP/HP_LaserJet_2410.ppd, PPD/HP/HP_LaserJet_2420.ppd,
	  PPD/HP/HP_LaserJet_2430.ppd, PPD/HP/HP_LaserJet_3050.ppd,
	  PPD/HP/HP_LaserJet_3052.ppd, PPD/HP/HP_LaserJet_3200.ppd,
	  PPD/HP/HP_LaserJet_3300_Series.ppd, PPD/HP/HP_LaserJet_3390.ppd,
	  PPD/HP/HP_LaserJet_4.ppd, PPD/HP/HP_LaserJet_4000_Series.ppd,
	  PPD/HP/HP_LaserJet_4050_Series.ppd,
	  PPD/HP/HP_LaserJet_4100_MFP.ppd,
	  PPD/HP/HP_LaserJet_4100_Series.ppd, PPD/HP/HP_LaserJet_4240.ppd,
	  PPD/HP/HP_LaserJet_4250.ppd, PPD/HP/HP_LaserJet_4345_MFP.ppd,
	  PPD/HP/HP_LaserJet_4350.ppd, PPD/HP/HP_LaserJet_4ML.ppd,
	  PPD/HP/HP_LaserJet_4MP.ppd,
	  PPD/HP/HP_LaserJet_4Si_v2011.110.ppd, PPD/HP/HP_LaserJet_4V.ppd,
	  PPD/HP/HP_LaserJet_4_Plus.ppd,
	  PPD/HP/HP_LaserJet_5000_Series.ppd,