@@ -1,7 +1,8 @@
 To most of this package the GPL applies (see below and
 http://www.gnu.org/), exception are the PPD files in db/source/PPD,
-they can have different licenses (mostlu MIT), see the comments in the
-beginning of the PPD files.
+they can have different licenses (mostly MIT), see the comments in the
+beginning of the PPD files and also the driver entries corresponding
+to the PPD files.
 
 
 
