@@ -53,11 +53,12 @@
 
    HPLIP contains two flavors of the printer driver. The default
    driver is the CUPS Raster driver "hpcups" and as alternative the
-   older IJS-based HPIJS driver is still available. HPLIP ships
-   updated PPD files for all HP printers and both driver
-   flavors. Therefore we do not provide PPD files here. For non-HP
-   printers which work with HPIJS we provide PPDs via the driver
-   entries &quot;&lt;a
+   older IJS-based HPIJS driver is still available. In addition there
+   are ready-made PPD files for all supported PostScript printers, so
+   that they get used in PostScript mode. HPLIP ships updated PPD
+   files for all HP printers and both driver flavors. Therefore we do
+   not provide PPD files here. For non-HP printers which work with
+   HPIJS we provide PPDs via the driver entries &quot;&lt;a
    href="show_driver.cgi?driver=hpijs-pcl3"&gt;hpijs-pcl3&lt;/a&gt;&quot;,
    &quot;&lt;a
    href="show_driver.cgi?driver=hpijs-pcl5e"&gt;hpijs-pcl5e&lt;/a&gt;&quot;,
