@@ -1,5 +1,10 @@
 2009-09-01  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* COPYING: Typo fix and text update.
+
+	* driver/hplip.xml: Tell also that there are PostScript PPDs in
+	  the HPLIP driver package.
+
 	* PPD/HP/HP_Business_Inkjet_2250.ppd,
 	  PPD/HP/HP_Business_Inkjet_2280.ppd,
 	  PPD/HP/HP_Business_Inkjet_2600.ppd,
